# Certificate-Authority

./: CMakeLists.txt  Makefile_client_server  client  client.cpp  client0.keys  client_Cliente.cpp  client_Cliente.h  client_InfoCertificado.cpp  client_InfoCertificado.h  client_SktCli.cpp  client_SktCli.h  common_Certificado.cpp  common_Certificado.h  common_Clave.cpp  common_Clave.h  common_Encriptador.cpp  common_Encriptador.h  common_Hash.cpp  common_Hash.h  common_InfoClave.cpp  common_InfoClave.h  common_Mensajero.cpp  common_Mensajero.h  common_Skt.cpp  common_Skt.h  common_SocketError.h  diagrama2.mdj  diagramas.mdj  ejemplo.txt  server  server.cpp  server_Indice.cpp  server_Indice.h  server_Server.cpp  server_Server.h  server_SktAceptador.cpp  server_SktAceptador.h  server_SktSv.cpp  server_SktSv.h  server_ThAceptador.cpp  (+5 more)
informe/: informe.aux  informe.tex
pruebas/create-certificate/: client  client0.req  server  valgrind_client0.out  valgrind_server.out
pruebas/create-invalid-hash/: client  run.sh  server  server.pubkeys  valgrind_client0.out  valgrind_server.out
pruebas/existing-certificate/: client0.args  client0.keys  client0.out  client0.req  index.txt  valgrind_client0.out  valgrind_client1.out  valgrind_server.out
pruebas/revoke-certificate/: client0.out  server  server.args  valgrind_client0.out  valgrind_server.out
pruebas/revoke-invalid-hash/: client0.args  client0.keys  client0.out  index.txt  server.pubkeys  valgrind_client0.out  valgrind_server.out
pruebas/revoke-invalid-subject/: Federico Manuel Gomez Peter.cert  client  client0.out  (+4 more)
(+11 files in other folders)
